syntax = "proto3";

package protoauth;

option go_package = "/proto;protoauth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string firstName = 4;
  string lastName = 5;
}

message RegisterResponse {
  string message = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
}